--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "colors-cli": "^1.0.32"
   }
 }
